codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_exec_segments_mark_completion_in_place_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: s
---
>_
  ✓ ⌨️ echo A
  ⠋ ⌨️ echo B
