codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__active_exec_segments_render_for_parallel_begins_snapshot.snap
---
source: tui/src/chatwidget/tests.rs
expression: s
---
>_
  ⠋ ⌨️ echo one
  ⠋ ⌨️ echo two
